fixed z-index and added sticky navbar

--- a/styles/header.css
+++ b/styles/header.css
@@ -20,7 +20,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    position: sticky; 
+    z-index: 9;
+    top: 0;
+
 }
 
 .container {
